--- a/style copy_old.css
+++ b/style copy_old.css
@@ -31,7 +31,7 @@ h6 {
 }
 .header {
   z-index: 1;
-  position: absolute;
+  position: relative;
   width: 100%;
 }
 .header nav .navbar-toggler {
@@ -61,6 +61,8 @@ h6 {
 .header nav .nav-link {
   font-size: 14px;
   letter-spacing: 0.1rem;
+  padding: 10px;
+  cursor: pointer;
   position: relative;
   display: inline-block;
   text-transform: uppercase;
@@ -79,16 +81,16 @@ h6 {
   content: "";
   right: 0;
   top: 0;
-  border-top: 3px solid #eaece8;
-  border-right: 3px solid #e8eee5;
+  border-top: 3px solid #e9ecf8;
+  border-right: 3px solid #e9ecf8de;
   transform: translate(-100%, 50%);
 }
 .header nav .nav-link:after {
   content: "";
   left: 0;
   bottom: 0;
-  border-bottom: 3px solid #eaece8;
-  border-left: 3px solid #e8eee5;
+  border-bottom: 3px solid #e9ecf8;
+  border-left: 3px solid #e9ecf8de;
   transform: translate(100%, -50%);
 }
 .header nav .nav-link:hover:before,
@@ -111,7 +113,7 @@ h6 {
   height: 900px;
   position: relative;
   overflow: hidden;
-  background: url(../img/info_1.jpg);
+  background: url(src/img/info_1.jpg);
   background-size: cover;
   z-index: 0;
   background-repeat: no-repeat;
@@ -136,7 +138,6 @@ h6 {
   opacity: 0.75;
   border-radius: 100%;
   z-index: -2;
-  box-shadow: inset 0px -80px 75px -30px #222831;
 }
 
 @media (max-width: 768px) {
@@ -164,8 +165,8 @@ h6 {
     rgba(0, 0, 0, 0.562)
   );
   z-index: 0;
-  box-shadow: inset 0px -80px 75px -30px #222831;
   transform: translateX(-50%) rotate(0deg);
+  box-shadow: inset 0px -105px 75px -30px #222831;
 }
 .hero .content {
   z-index: 2;
@@ -198,63 +199,157 @@ h6 {
   font-size: 16px;
   text-align: justify;
 }
+.hero .btn-starts {
+  width: 10em;
+  position: relative;
+  height: 3.5em;
+  border: 3px ridge #e9ecf8;
+  border-radius: 0.6em;
+  outline: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  background-color: transparent;
+  color: #d8dae4;
+  transition: 0.3s ease;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+.hero .btn-starts::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  display: block;
+  transition: 0.7s ease;
+  z-index: -1;
+}
+.hero .btn-starts::after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #d8dae4;
+  display: block;
+  transition: 0.7s ease;
+  z-index: -1;
+}
+.hero .btn-starts:hover::before {
+  top: -35%;
+  background-color: #d8dae4;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.hero .btn-starts:hover::after {
+  top: -45%;
+  background-color: #d8dae4;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+.hero .btn-starts:hover{
+  color: #222831;
+  box-shadow: inset 0px 0px 25px #00000023;
+}
+@media (max-width: 425px) {
+  .hero .btn-starts {
+    width: 8em;
+  }
+}
 .hero .hero-image .banner {
   position: absolute;
   bottom: 0;
   z-index: 0;
   height: 700px;
 }
-
-.rules {
+/* Sekcja Info */
+.info {
   position: relative;
-  width: 100%;
-  max-width: 100%;
 }
-
-.rules-box {
-  background: linear-gradient(#222831, #36404ea1);
+.infoBox {
   position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  border: 2px solid #e9ecf827;
-  border-radius: 20px;
+  z-index: 1;
 }
-.rules-box .circle {
-  width: 400px;
-  height: 5px;
-  background: #d8dae4;
-  box-shadow: 0 0 40px #e9ecf8;
+.infoBox::before {
+  content: "";
+  background: #ffffff00;
   position: absolute;
+  left: 0;
+  border: 2px solid #d8dae4;
+  right: 0;
+  top: 20px;
+  bottom: 0;
+  z-index: -1;
+  box-shadow: 0px -45px 45px -40px #ffffff33;
 }
-.rules-box  .circle:nth-child(1) {
-  top: -35px;
-  left: 35px;
+.infoBox::after {
+  content: "";
+  background: #ffffff00;
+  position: absolute;
+  left: 0;
+  border: 2px solid #d8dae4;
+  right: 0;
+  top: 20px;
+  bottom: 0;
+  z-index: -1;
+  box-shadow: 0px 45px 45px -40px #ffffff33;
 }
-
-.rules-box  .circle:nth-child(2) {
-  bottom: -35px;
-  right: 35px;
+.infoBox .infoImage {
+  border: 2px solid #d8dae4;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 70px;
+  color: #d8dae4;
+  height: 70px;
+  background: #222831;
+  margin: 0 auto;
+  z-index: 2;
+  position: relative;
+  box-shadow: 0px 0px 15px#e9ecf8;
 }
-.rules-box .rules-header .title {
+.infoBox .infoImage i {
+  font-size: 36px;
+}
+.info .content {
+  z-index: 1;
+  position: relative;
+}
+.info .content .subtitle {
   font-weight: 700;
   font-size: 32px;
-  color: #d8dae4;
+  color: #e9ecf8;
   text-align: center;
   text-transform: uppercase;
 }
-
-.rules-box .rules-header .line {
-  color: #e9ecf8;
-  opacity: 0.75;
+@media (max-width: 768px) {
+  .info .content .subtitle {
+    text-transform: capitalize;
+  }
 }
-
-.rules-box .rules-body .text {
+@media (max-width: 425px) {
+  .info .content .subtitle {
+    text-align: left;
+    font-size: 28px;
+  }
+}
+.info .content .line {
+  color: #e9ecf8;
+}
+.info .content .subtext {
   color: #d8dae4;
   font-size: 16px;
   text-align: justify;
 }
-
 /* Stopek */
 .footer {
   position: relative;
@@ -355,4 +450,77 @@ h6 {
   .footer .btn-starts {
     width: 8em;
   }
+}
+/* Modal Logowania */
+.modal {
+  position: relative;
+}
+.login-modal .modal {
+  backdrop-filter: blur(30px);
+}
+.login-modal .modal-content {
+  background: linear-gradient(#222831, #36404ea1);
+  position: relative;
+  max-width: 800px;
+  width: 100%;
+  z-index: 2;
+  color: #e6e8f0;
+  border: 2px solid #e9ecf827;
+  border-radius: 20px;
+}
+.login-modal .modal-content .btn-close {
+  color: #e6e8f0 !important;
+}
+.modal-content .form-group {
+  font-family: "Segoe UI", sans-serif;
+  position: relative;
+  color: #d8dae4;
+}
+.modal-content .form-group .form-control {
+  font-size: 100%;
+  color: #d8dae4;
+  outline: none;
+  border: 2px solid #e9ecf87e;
+  background-color: transparent;
+  border-radius: 6px;
+  transition: 0.4s ease-in-out;
+  width: 100%;
+}
+.modal-content .form-group .form-label {
+  color: #e9ecf8bd;
+}
+.modal-content .form-group .form-control:focus,
+.form-control:valid {
+  outline: none;
+  border: 2px solid #e9ecf8;
+  box-shadow: none;
+}
+.modal-content .form-control::placeholder {
+  color: #d8dae4;
+  opacity: 0.5;
+}
+.modal-content .form-check-label {
+  color: #e9ecf8c2;
+}
+.modal-content .btr {
+  position: relative;
+  height: 3em;
+  border: 3px ridge #e9ecf87e;
+  border-radius: 6px;
+  outline: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  background-color: transparent;
+  color: #e9ecf8bd;
+  transition: .4s ease-in-out;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.modal-content .btr:hover {
+  color: #e9ecf8;
+  border: 3px solid #e9ecf8;
+}
+.modal-backdrop.show {
+  z-index: 3;
 }
