--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* Globalne Atrybuty */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat";
+  font-family: "Roboto";
+  letter-spacing: 0.1rem;
 }
 a {
   text-decoration: none;
@@ -29,10 +29,24 @@ h5,
 h6 {
   font-weight: 700;
 }
+main {
+  position: relative;
+}
 .header {
   z-index: 1;
-  position: absolute;
   width: 100%;
+  position: relative;
+}
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 10%;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='20' patternTransform='scale(3) rotate(120)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(228, 52%, 94%, 0.1)'/><path d='M40 0L20-10V0l20 10zm0 10L20 0v10l20 10zm0 10L20 10v10l20 10zM0 20l20-10v10L0 30zm0-10L20 0v10L0 20zM0 0l20-10V0L0 10z'  stroke-width='7' stroke='hsla(216, 18%, 16%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
 .header nav .navbar-toggler {
   color: rgb(233, 236, 248);
@@ -59,8 +73,7 @@ h6 {
   }
 }
 .header nav .nav-link {
-  font-size: 14px;
-  letter-spacing: 0.1rem;
+  font-size: 16px;
   padding: 10px;
   cursor: pointer;
   position: relative;
@@ -105,174 +118,206 @@ h6 {
     opacity: 0;
   }
 }
-
 /* Sekcja Hero */
 .hero {
   width: 100%;
   max-width: 100%;
-  height: 900px;
+  height: 100%;
   position: relative;
   overflow: hidden;
-  background: url(src/img/info_1.jpg);
-  background-size: cover;
   z-index: 0;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-@media (min-width: 1200px) {
-  .hero {
-    background-attachment: fixed;
-  }
 }
 .hero::before {
   content: "";
   position: absolute;
-  left: 50%;
-  top: 50%;
-  right: 0;
-  bottom: 0;
-  width: 800px;
-  height: 100%;
-  background: #d8dae4;
-  box-shadow: 8px 8px 75px 60px #d8dae4;
-  opacity: 0.75;
-  border-radius: 100%;
-  z-index: -2;
-}
-
-@media (max-width: 768px) {
-  .hero::before {
-    background: none;
-  }
-}
-@media (max-width: 768px) {
-  .hero::before {
-    box-shadow: none;
-  }
-}
-.hero::after {
-  content: "";
-  position: absolute;
-  left: 50%;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    to left,
-    rgba(0, 0, 0, 0.712),
-    rgba(0, 0, 0, 0.562)
-  );
-  z-index: 0;
-  transform: translateX(-50%) rotate(0deg);
-  box-shadow: inset 0px -105px 75px -30px #222831;
+  z-index: -1;
+  opacity: 10%;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='20' patternTransform='scale(3) rotate(120)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(228, 52%, 94%, 0.1)'/><path d='M40 0L20-10V0l20 10zm0 10L20 0v10l20 10zm0 10L20 10v10l20 10zM0 20l20-10v10L0 30zm0-10L20 0v10L0 20zM0 0l20-10V0L0 10z'  stroke-width='7' stroke='hsla(216, 18%, 16%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
 .hero .content {
   z-index: 2;
   position: relative;
+  line-height: 30px;
 }
-.hero .content .title {
+.title {
   font-weight: 700;
   font-size: 62px;
   color: #e9ecf8;
   text-transform: uppercase;
   position: relative;
 }
+.subtitle {
+  font-weight: 700;
+  font-size: 30px;
+  color: #e9ecf8;
+  text-transform: uppercase;
+  position: relative;
+}
 @media (max-width: 768px) {
-  .hero .content .title {
+  .title {
     font-size: 42px;
     text-transform: capitalize;
   }
 }
 @media (max-width: 425px) {
-  .hero .content .title {
+  .title {
     text-align: left;
   }
 }
-.hero .content .line {
+.line {
   color: #e9ecf8;
   opacity: 1;
+  width: 50px;
+  border-bottom: 3px solid #e9ecf8;
 }
-.hero .content .text {
+.text {
   color: #d8dae4;
-  font-size: 16px;
+  font-size: 18px;
   text-align: justify;
 }
-.hero .btn-starts {
-  width: 10em;
+.hero .hero-image {
+  width: 100%;
+  height: 400px;
   position: relative;
-  height: 3.5em;
-  border: 3px ridge #e9ecf8;
-  border-radius: 0.6em;
+  border-radius: 50%;
+}
+.hero .banner {
+  position: relative;
+  z-index: 0;
+  width: 400px;
+  height: 400px;
+  left: 10%;
+  animation-name: soccerball;
+  animation-fill-mode: both;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+}
+@media (min-width: 1200px) {
+  .hero .banner {
+    left: 20%;
+  }
+}
+@keyframes soccerball {
+  0% {
+    transform: translateY(-30px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(30px);
+  }
+}
+
+/* Sekcja Game */
+.game {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  background: transparent;
+  z-index: 0;
+}
+
+.game::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 10%;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='20' patternTransform='scale(3) rotate(120)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(228, 52%, 94%, 0.1)'/><path d='M40 0L20-10V0l20 10zm0 10L20 0v10l20 10zm0 10L20 10v10l20 10zM0 20l20-10v10L0 30zm0-10L20 0v10L0 20zM0 0l20-10V0L0 10z'  stroke-width='7' stroke='hsla(216, 18%, 16%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
+}
+
+.box {
+  background: #36404ea1;
+  position: relative;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  padding: 20px;
+  color: #e6e8f0;
+  border: 2px solid #e9ecf827;
+  border-radius: 20px;
+}
+.box .form-group {
+  font-family: "Roboto", sans-serif;
+  position: relative;
+  color: #d8dae4;
+}
+.box .form-group .form-control {
+  font-size: 100%;
+  color: #d8dae4;
+  outline: none;
+  border: 2px solid #e9ecf87e;
+  background-color: transparent;
+  border-radius: 6px;
+  transition: 0.4s ease-in-out;
+  width: 100%;
+}
+.box .form-group .form-label {
+  color: #e9ecf8bd;
+}
+.box .form-group .form-control:focus,
+.form-control:valid {
+  outline: none;
+  border: 2px solid #e9ecf8;
+  box-shadow: none;
+}
+.box .form-control::placeholder {
+  color: #d8dae4;
+  opacity: 0.5;
+}
+.box .btr {
+  position: relative;
+  height: 3em;
+  border: 3px ridge #e9ecf87e;
+  border-radius: 6px;
   outline: none;
   text-transform: uppercase;
   overflow: hidden;
   background-color: transparent;
-  color: #d8dae4;
-  transition: 0.3s ease;
+  color: #e9ecf8bd;
+  transition: 0.4s ease-in-out;
   font-size: 16px;
   font-weight: bold;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
+  cursor: pointer;
 }
-.hero .btn-starts::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
-  display: block;
-  transition: 0.7s ease;
-  z-index: -1;
-}
-.hero .btn-starts::after {
-  content: "";
-  position: absolute;
-  left: 55%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 180%;
-  width: 160%;
-  height: 190%;
-  background-color: #d8dae4;
-  display: block;
-  transition: 0.7s ease;
-  z-index: -1;
-}
-.hero .btn-starts:hover::before {
-  top: -35%;
-  background-color: #d8dae4;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+.box .btr:hover {
+  color: #e9ecf8;
+  border: 3px solid #e9ecf8;
 }
 
-.hero .btn-starts:hover::after {
-  top: -45%;
-  background-color: #d8dae4;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
-.hero .btn-starts:hover{
-  color: #222831;
-  box-shadow: inset 0px 0px 25px #00000023;
-}
-@media (max-width: 425px) {
-  .hero .btn-starts {
-    width: 8em;
-  }
-}
-.hero .hero-image .banner {
-  position: absolute;
-  bottom: 0;
-  z-index: 0;
-  height: 700px;
-}
 /* Sekcja Info */
 .info {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
   position: relative;
+  overflow: hidden;
+  background: transparent;
+  z-index: 0;
+}
+
+.info::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 10%;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='20' patternTransform='scale(3) rotate(120)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(228, 52%, 94%, 0.1)'/><path d='M40 0L20-10V0l20 10zm0 10L20 0v10l20 10zm0 10L20 10v10l20 10zM0 20l20-10v10L0 30zm0-10L20 0v10L0 20zM0 0l20-10V0L0 10z'  stroke-width='7' stroke='hsla(216, 18%, 16%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
 .infoBox {
   position: relative;
@@ -300,7 +345,6 @@ h6 {
   top: 20px;
   bottom: 0;
   z-index: -1;
-  box-shadow: 0px 45px 45px -40px #ffffff33;
 }
 .infoBox .infoImage {
   border: 2px solid #d8dae4;
@@ -315,7 +359,6 @@ h6 {
   margin: 0 auto;
   z-index: 2;
   position: relative;
-  box-shadow: 0px 0px 15px#e9ecf8;
 }
 .infoBox .infoImage i {
   font-size: 36px;
@@ -350,16 +393,28 @@ h6 {
   font-size: 16px;
   text-align: justify;
 }
+
+
 /* Stopek */
 .footer {
   position: relative;
   width: 100%;
   max-width: 100%;
-  background: #222831;
   color: #d8dae4;
   z-index: 2;
 }
 
+.footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 10%;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='20' patternTransform='scale(3) rotate(120)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(228, 52%, 94%, 0.1)'/><path d='M40 0L20-10V0l20 10zm0 10L20 0v10l20 10zm0 10L20 10v10l20 10zM0 20l20-10v10L0 30zm0-10L20 0v10L0 20zM0 0l20-10V0L0 10z'  stroke-width='7' stroke='hsla(216, 18%, 16%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
+}
 .footer .content {
   position: relative;
 }
@@ -385,142 +440,4 @@ h6 {
   .footer .content .title {
     text-align: left;
   }
-}
-.footer .btn-starts {
-  width: 10em;
-  position: relative;
-  height: 4em;
-  border: 3px ridge #e9ecf8;
-  border-radius: 0.6em;
-  outline: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  background-color: transparent;
-  color: #d8dae4;
-  transition: 0.3s ease;
-  font-size: 16px;
-  font-weight: bold;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
-}
-.footer .btn-starts::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
-  display: block;
-  transition: 0.7s ease;
-  z-index: -1;
-}
-.footer .btn-starts::after {
-  content: "";
-  position: absolute;
-  left: 55%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 180%;
-  width: 160%;
-  height: 190%;
-  background-color: #d8dae4;
-  display: block;
-  transition: 0.7s ease;
-  z-index: -1;
-}
-.footer .btn-starts:hover::before {
-  top: -35%;
-  background-color: #d8dae4;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
-
-.footer .btn-starts:hover::after {
-  top: -45%;
-  background-color: #d8dae4;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
-.footer .btn-starts:hover{
-  color: #222831;
-  box-shadow: inset 0px 0px 25px #00000023;
-}
-@media (max-width: 425px) {
-  .footer .btn-starts {
-    width: 8em;
-  }
-}
-/* Modal Logowania */
-.modal {
-  position: relative;
-}
-.login-modal .modal {
-  backdrop-filter: blur(30px);
-}
-.login-modal .modal-content {
-  background: linear-gradient(#222831, #36404ea1);
-  position: relative;
-  max-width: 800px;
-  width: 100%;
-  z-index: 2;
-  color: #e6e8f0;
-  border: 2px solid #e9ecf827;
-  border-radius: 20px;
-}
-.login-modal .modal-content .btn-close {
-  color: #e6e8f0 !important;
-}
-.modal-content .form-group {
-  font-family: "Segoe UI", sans-serif;
-  position: relative;
-  color: #d8dae4;
-}
-.modal-content .form-group .form-control {
-  font-size: 100%;
-  color: #d8dae4;
-  outline: none;
-  border: 2px solid #e9ecf87e;
-  background-color: transparent;
-  border-radius: 6px;
-  transition: 0.4s ease-in-out;
-  width: 100%;
-}
-.modal-content .form-group .form-label {
-  color: #e9ecf8bd;
-}
-.modal-content .form-group .form-control:focus,
-.form-control:valid {
-  outline: none;
-  border: 2px solid #e9ecf8;
-  box-shadow: none;
-}
-.modal-content .form-control::placeholder {
-  color: #d8dae4;
-  opacity: 0.5;
-}
-.modal-content .form-check-label {
-  color: #e9ecf8c2;
-}
-.modal-content .btr {
-  position: relative;
-  height: 3em;
-  border: 3px ridge #e9ecf87e;
-  border-radius: 6px;
-  outline: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  background-color: transparent;
-  color: #e9ecf8bd;
-  transition: .4s ease-in-out;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.modal-content .btr:hover {
-  color: #e9ecf8;
-  border: 3px solid #e9ecf8;
-}
-.modal-backdrop.show {
-  z-index: 3;
 }
